crates/matrix-sdk-crypto/src/machine/tests/snapshots/migration_old_olm_decrypted_processed_event.snap
---
source: crates/matrix-sdk-crypto/src/machine/tests/send_encrypted_to_device.rs
expression: processed_event
---
{
  "Decrypted": {
    "raw": {
      "$serde_json::private::RawValue": "{\"content\":{\"device_id\":\"XYZABCDE\",\"rooms\":[\"!726s6s6q:example.com\"]},\"keys\":{\"ed25519\":\"jyRZplhaPXXZx6Miu8fWYxJKF2NS8bDeQ27O/+DN/+U\"},\"recipient\":\"@bob:example.com\",\"recipient_keys\":{\"ed25519\":\"hZXl8irs7TOrytL338C7rK611agxwFLzZL6B5tfD54I\"},\"sender\":\"@alice:example.org\",\"sender_device_keys\":{\"algorithms\":[\"m.olm.v1.curve25519-aes-sha2\",\"m.megolm.v1.aes-sha2\"],\"device_id\":\"JLAFKJWSCS\",\"keys\":{\"curve25519:JLAFKJWSCS\":\"R33ydtOeGBADVsIxeu1A4qIKKgePRZ4iePq8GyadnHY\",\"ed25519:JLAFKJWSCS\":\"jyRZplhaPXXZx6Miu8fWYxJKF2NS8bDeQ27O/+DN/+U\"},\"signatures\":{\"@alice:example.org\":{\"ed25519:JLAFKJWSCS\":\"NhKwKPvxOw/ynjLtCKol7k6HkCqBsciurn52eEAwEuTMLb7sAsgvqDLLk3k1wsJHGFI/BppuoQdlI9LfOf4rAA\"}},\"user_id\":\"@alice:example.org\"},\"type\":\"m.new_device\"}"
    },
    "encryption_info": {
      "sender": "@alice:example.org",
      "sender_device": null,
      "algorithm_info": {
        "OlmV1Curve25519AesSha2": {
          "curve25519_public_key_base64": ""
        }
      },
      "verification_state": {
        "Unverified": {
          "None": "MissingDevice"
        }
      }
    }
  }
}
