crates/matrix-sdk-crypto/src/machine/tests/snapshots/processed_to_device_variants.snap
---
source: crates/matrix-sdk-crypto/src/machine/tests/send_encrypted_to_device.rs
expression: "processed_event.to_raw().deserialize_as::<Value>().unwrap()"
---
{
  "content": {
    "call_id": "",
    "device_id": "XYZABCDE",
    "keys": [
      {
        "index": 0,
        "key": "I7qrSrCR7Yo9B4iGVnR8IA"
      }
    ]
  },
  "sender": "@alice:example.org",
  "type": "rtc.call.encryption_keys"
}
